2016-08-19  Natalia Portillo  <claunia@claunia.com>

	* ATASCII.cs: Added ATASCII.

	* Encoding.cs:
	* Claunia.Encoding.csproj: A

2016-08-18  Natalia Portillo  <claunia@claunia.com>

	* LisaRoman.cs: Added missing XML documentation and emptied
	webname.

2016-08-18  Natalia Portillo  <claunia@claunia.com>

	* Encoding.cs:
	* Pangrams.cs:
	* LisaRoman.cs:
	* Claunia.Encoding.csproj:
	* AssemblyInfo.cs: First version, supports only Apple Lisa
	encoding.
