@@ -479,7 +479,7 @@ namespace Claunia.Encoding
             // 0x10
             '\u2663','\u250C','\u2500','\u253C','\u25CF','\u2584','\u258E','\u252C',
             // 0x18
-            '\u2534','\u258C','\u2514','\u241B','\u2191','\u2193','\u2190','\u2192',
+            '\u2534','\u258C','\u2514','\u001B','\u2191','\u2193','\u2190','\u2192',
             // 0x20
             '\u0020','\u0021','\u0022','\u0023','\u0024','\u0025','\u0026','\u0027',
             // 0x28
@@ -511,7 +511,7 @@ namespace Claunia.Encoding
             // 0x90
             '\u0000','\u0000','\u0000','\u0000','\u0000','\u0000','\u0000','\u0000',
             // 0x98
-            '\u0000','\u0000','\u0000','\u0000','\u0000','\u0000','\u0000','\u0000',
+            '\u0000','\u0000','\u0000','\u000D','\u0000','\u0000','\u0000','\u0000',
             // 0xA0
             '\u0000','\u0000','\u0000','\u0000','\u0000','\u0000','\u0000','\u0000',
             // 0xA8
@@ -535,7 +535,7 @@ namespace Claunia.Encoding
             // 0xF0
             '\u0000','\u0000','\u0000','\u0000','\u0000','\u0000','\u0000','\u0000',
             // 0xF8
-            '\u0000','\u0000','\u0000','\u0000','\u0000','\u0000','\u0000','\u0000'
+            '\u0000','\u0000','\u0000','\u0000','\u0000','\u0007','\u0000','\u0000'
         };
 
         /// <summary>
@@ -606,7 +606,7 @@ namespace Claunia.Encoding
                     return 0x19;
                 case '\u2514':
                     return 0x1A;
-                case '\u241B':
+                case '\u001B':
                     return 0x1B;
                 case '\u2191':
                     return 0x1C;
@@ -808,6 +808,10 @@ namespace Claunia.Encoding
                     return 0x7E;
                 case '\u25B6':
                     return 0x7F;
+                case '\u000D':
+                    return 0x9B;
+                case '\u0007':
+                    return 0xFD;
                 default:
                     // Fallback to '?'
                     return 0x3F;
